fixed some contrast issues; changed styling a bit

--- a/src/styles/mq.scss
+++ b/src/styles/mq.scss
@@ -108,10 +108,9 @@
     }
 
     .header-module--linkContainer--2jqNe {
-        justify-content: center;
         li {
-            margin-right: 15px;
             font-size: 1rem;
+            letter-spacing: normal;
         }
     }
 }
