--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -106,7 +106,6 @@ p {
 .linkIndex {
     text-decoration: none;
     font-weight: 700;
-    // text-shadow: 2px 0px #B054A9;
     border-bottom: 1px solid #B054A9;
     color: #B054A9;
     transition: all ease-in-out 0.3s;
@@ -125,13 +124,13 @@ p {
     margin-top: 5rem;
     li {
         list-style-type: none;
-        border-bottom: 2px solid #B054A9;
+        border-bottom: 2px solid #CFB826;
         color: #CFB826;
         font-size: 1.8rem;
         padding: 30px 0px;
         .question {
             font-weight: 700;
-            color: #CFB826;
+            color: #B054A9;
             font-size: 2.1rem;
             margin-bottom: 0;
         }
@@ -139,6 +138,10 @@ p {
             margin-top: 5px;
             line-height: 2;
         }
+    }
+
+    li:last-child {
+        border-bottom: none;
     }
 }
 
@@ -148,6 +151,13 @@ footer {
     }
 }
 
+.content,
+.blogTemplate-module--postContainer--RALPU {
+    padding: 20px;
+    background-color: transparentize(#EFE7E7, 0.2);
+    box-shadow: 2px 2px 20px transparentize(#131315, 0.85);
+}
+
 .postList {
     margin: 0;
     padding: 0;
@@ -155,6 +165,7 @@ footer {
         list-style-type: none;
         margin-bottom: 20px;
         padding: 20px;
+        background-color: transparentize(#EFE7E7, 0.2);
         box-shadow: 2px 2px 20px transparentize(#131315, 0.85);
         h3{
             line-height: 1.2;
@@ -205,12 +216,13 @@ footer {
         margin-right: 30px;
         a {
             font-size: 2rem;
+            color: #B054A9;
             text-transform: uppercase;
             transition: all ease-in-out 0.3s;
         }
         a:hover,
         a:focus {
-            color: #B054A9;
+            color: #CFB826;
         }
     }
 }
