--- a/src/templates/templatesStyling/blogTemplate.module.scss
+++ b/src/templates/templatesStyling/blogTemplate.module.scss
@@ -8,7 +8,7 @@ h3 {
 }
 
 a {
-    color: #CFB826;
+    color: #B054A9;
     font-weight: 700;
 }
 
@@ -23,6 +23,7 @@ a {
     display: flex;
     border-bottom: 2px solid #B054A9;
     padding-bottom: 20px;
+    margin-bottom: 20px;
     li {
         background-color: hsl(0, 20%, 92%);
         list-style-type: none;
@@ -42,9 +43,15 @@ a {
 }
 
 .postContainer {
-    padding: 10px 0px 80px;
+    padding: 20px;
+    h3 {
+        text-shadow: 2px 0px #CFB826;
+    }
     p {
         line-height: 2;
         margin-bottom: 40px;
+        a:hover {
+            color: #CFB826;
+        }
     }
 }
